--- a/View/index.html
+++ b/View/index.html
@@ -2,55 +2,11 @@
 <html>
 <head>
   <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-  <style type="text/css">
 
-    #board {
-      width:740px;
-      margin:0 auto;
-      background-color:yellow;
-    }
-    #column {
-      display: inline-block;
-      width: 100px;
-      height: 600px;
-      background-color: yellow;
-      border: 1px solid #000;
-    }
-    .empty {
-      height: 90px;
-      width: 100%;
-      background-color:#fff;
-      border: 1px solid #000;
-      border-radius: 100%;
-    }
+  <script src="view.js"></script>
 
-    .player1 {
-        height: 90px;
-        width: 100%;
-        background-color: red;
-        border: 1px solid #000;
-        border-radius: 100%;
-    }
-    .player2 {
-        height: 90px;
-        width: 100%;
-        background-color: #000;
-        border: 1px solid #000;
-        border-radius: 100%;
-    }
-    button {
-      height: 30px;
-      width: 83px;
-      background-color: blue;
-      margin-left: 8px;
-      margin-top: 7px;
-    }
-    .feet {
-      height:90px;
-      width:20px;
-      background-color:blue;
-    }
-  </style>
+  <link rel="stylesheet" type="text/css" href="stylesheet.css">
+
 </head>
 <body>
 
@@ -128,11 +84,5 @@
 </div>
 <!-- <div class="feet"></div> -->
 </body>
-<script type="text/javascript">
-  $(document).ready(function() {
-    $("button").click(function() {
-      $(this).parent().children(".empty").last().addClass("player2").removeClass("empty");
-    })
-  })
-</script>
+
 </html>
