--- a/View/stylesheet.css
+++ b/View/stylesheet.css
@@ -1,5 +1,6 @@
     #board {
-      width:740px;
+      max-width: 740px;
+      width:100%;
       margin:0 auto;
       background-color:yellow;
     }
