--- a/View/index.html
+++ b/View/index.html
@@ -13,79 +13,80 @@
 </head>
 <body>
 
-<div id="board">
+<div class="board">
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 
   <div id="column">
-    <div class="empty">1</div>
-    <div class="empty">2</div>
-    <div class="empty">3</div>
-    <div class="empty">4</div>
-    <div class="empty">5</div>
-    <div class="empty">6</div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <button></button>
   </div>
 </div>
 <!-- <div class="feet"></div> -->
+<!-- <img src = "http://24.media.tumblr.com/tumblr_ljgxm89DnS1qdmv0so1_500.gif"> -->
 </body>
 
 </html>
