Add win to view and reset button

--- a/View/index.html
+++ b/View/index.html
@@ -76,6 +76,13 @@
     <button></button>
   </div>
 
+<div class="win">
+  <img src="http://24.media.tumblr.com/tumblr_ljgxm89DnS1qdmv0so1_500.gif">
+  <div class="win-text">
+    Red wins !!!
+  </div>
+  <button class="game_over">Reset Board</button>
+</div>
   <div id="column">
     <div class="empty"></div>
     <div class="empty"></div>
