--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="/css/application.css">
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://cdn.firebase.com/v0/firebase.js"></script>
   <script src="/js/application.js"></script>
   <script src="/js/board.js"></script>
 
