--- a/app/views/layout.erb
+++ b/app/views/layout.erb
@@ -11,10 +11,12 @@
     application.css is where you put your styles
   -->
   <link rel="stylesheet" href="/css/application.css">
+  <link href='http://fonts.googleapis.com/css?family=Hammersmith+One' rel='stylesheet' type='text/css'>
 
   <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <script src="/js/application.js"></script>
   <script src="/js/board.js"></script>
+
 
   <title>Connect Four</title>
 </head>
