Add Next Chip color and adjusted win positioning

--- a/app/views/board.erb
+++ b/app/views/board.erb
@@ -2,6 +2,11 @@
   <h1>Raccoon ConnectFour</h1>
 </div>
 
+<div class="nextChip">
+  <h3>Next Chip:</h3>
+  <div class="currentPlayer"></div>
+</div>
+
 <div class="board">
 
   <div id="column">
