--- a/public/css/application.css
+++ b/public/css/application.css
@@ -1,7 +1,12 @@
+html {
+  margin: 0;
+}
+
 body {
   background-image: url('http://images5.alphacoders.com/312/312646.jpg');
   background-size: cover;
   font-family: 'Hammersmith One', sans-serif;
+  margin: 0;
   }
 
 .title{
@@ -19,6 +24,7 @@ body {
 }
 .title h1{
   color: white;
+  margin: 0;
   font-size: 60px;
   text-align: center;
   padding-top: 25px;
